syntax = "proto3";
package kratos.api;

option go_package = "github.com/china-xs/kratos-tpl/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Registry registry = 3;

}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  repeated Mysql mysql = 3;
  message Mysql {
    string domain = 1;//域
    string source = 2;//链接
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}


message Registry {
  message Nacos {
    message ClientConfig {
      string namespace_id = 1;
      uint64 timeout_ms = 2;
      bool not_load_cache_at_start = 3;
      string log_dir = 4;
      string cache_dir = 5;
      string rotate_time = 6;
      int64 max_age = 7;
      string log_level = 8;
    }
    string address = 1;
    uint64 port = 2;
    string scheme = 3;
    string path = 4;
    ClientConfig config = 5;
  }
  Nacos nacos = 1;
}